# TensorRT-Scaled-YOLOv4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cudaEngine.cpp  inference.cpp  inference_mot.cpp
include/: EntroyCalibrator.h  config.h  mish.h  nms.h  post.h  resize.h  trt.h  util.h
mishplugin/: CMakeLists.txt  mish.cpp  mishkernel.cu
mot/: CMakeLists.txt  cholesky.cpp  cholesky.h  klmf.cpp  klmf.h  lapjv.cpp  lapjv.h  track.cpp  track.h
script/: export.py  models.py
script/ScaledYOLOv4-csp/: export.py
script/ScaledYOLOv4-csp/models/: models.py
script/ScaledYOLOv4-large/: export.py
script/ScaledYOLOv4-large/models/: common.py  yolo.py
script/ScaledYOLOv4-large/utils/: activations.py
script/models/: models.py
script/utils/: layers.py
src/: CMakeLists.txt  EntroyCalibrator.cpp  nms.cpp  post.cu  resize.cpp  resize.cu  trt.cpp
